NLP TP's/texts/robotics/robotics.stackexchange_0000097977.txt
Q:

python errors on sourcing devel/setup.zsh

When I source devel/setup.zsh in a catkin_tools workspace while using zsh I get python errors on Bionic using Melodic:
% source devel/setup.zsh
  File "<string>", line 1
    from __future__ import print_function
    ^
SyntaxError: invalid syntax
  File "<string>", line 1
    from __future__ import print_function
^

Has anyone else seen this?  Do you have any idea how to troubleshoot this?

Originally posted by tyler-picknik on ROS Answers with karma: 241 on 2021-01-05
Post score: 0

A:

This was cause by issues in my python enviroment.  Closing as this is not an issue with zsh.

Originally posted by tyler-picknik with karma: 241 on 2021-01-05
This answer was ACCEPTED on the original site
Post score: 0

Original comments
Comment by jayess on 2021-01-05:
What was the issue?
Comment by tyler-picknik on 2021-01-06:
It had to do with some bug in colorized cat that uses some python package I installed with pip.  I debugged this by using set -x and found it complaining about that library.

